# poker

./: .gitignore  CMakeLists.txt
include/: Controller.hpp  card.h  handEvaluators.hpp  image.h  poker.hpp
resources/: image.frag
src/: Controller.cpp  card.cpp  image.cpp  main.cpp  pokerlib.cpp  tester.cpp
src/5cardHandEvaluator/: 5cardHandEvaluator.cpp  arrays.hpp
src/7cardHandEvaluator/: 7cardHandEvaluator.cpp  dpTables.hpp  noflushTable.hpp  tables.h
src/naivePreflop/: naive_preflop.cpp
src/preFlopHandEvaluator/: evaluationutils.cpp  evaluationutils.h  preFlopHandEvaluator.cpp
